--- a/style.css
+++ b/style.css
@@ -2,10 +2,18 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
   
+  canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* This will place the canvas behind all other elements */
+  }
   /* Navigation Bar */
   
   #home {
-    background-color:  #7600bc;
+    background-color:  #0c4fc4;
     padding-bottom: 1cm;
     margin-left:-1cm;
     margin-right:-1cm;
@@ -13,6 +21,7 @@ body {
     padding-top: 2cm;
     padding-bottom: 2cm;
     height: 5mm;
+    z-index: 1;
    }
   
   .topmenu {
@@ -21,10 +30,11 @@ body {
     padding: 20px;
     font-size: 20px;
     text-decoration:none;
+    z-index: 1;
   }
   
   .topmenu:hover {
-    color: white;
+    color: aqua;
     font-weight: bolder;
     text-decoration: underline;
     /* Add the styles here */
@@ -33,6 +43,7 @@ body {
   .topdiv {
     float: right;
     padding-right: 1cm;
+    z-index: 1;
   }
   
   .profile_name {
@@ -40,11 +51,13 @@ body {
     padding-left: 2cm;
     color: aqua;
     font-size: 20px;
+    z-index: 1;
     /* Add the styles here */
   }
 
   .profile_image {
     border-radius: 50%;
+    z-index: 1;
 }
   
   .profile_name .contact_info {
@@ -53,12 +66,14 @@ body {
     display: flex;
     align-items: center;
     flex-direction: row;
+    z-index: 1;
   }
   
   .contact_info img {
     width:25px;
     margin-right: 10px;
     float:left;
+    z-index: 1;
   }
   
   /* Titles */
@@ -68,28 +83,33 @@ body {
     font-size: 50px;
     text-align: center;
     float: left;
-    color: #7600bc;
+    color: #0c4fc4;
     margin: 30px;
     margin-left: 60px;
     margin-top: 40px;
     margin-bottom: 0px;
+    z-index: 1;
   }
   
   .introduction {
     text-align: justify;
+    background-color: #fff;
     font-size: 30px;
+    color: #0c4fc4;
     text-align: center;
     float: left;
     margin-top: 30px;
     margin-bottom: 20px;
     animation-duration: 5s;
     position: relative;
+    z-index: 1;
   }
   
   /* Used in the About Me sections */
   
   .container {
     display: flex;
+    z-index: 1;
   }
   
   /* About Me */
@@ -97,18 +117,21 @@ body {
   .about-me {
     display: flex;
     align-items: center;
+    z-index: 1;
   }
   
   #about-me h1 {
     font-size: 65px;
     margin-top: 90px;
-    color: #7600bc;
+    color: #0c4fc4;
+    z-index: 1;
   }
   
   #about-me p {
     font-size: 25px;
     color: rgb(128, 128, 128);
     margin-top: -1cm;
+    z-index: 1;
   }
   
   .profile_image {
@@ -116,6 +139,7 @@ body {
     height: fit-content;
     vertical-align: middle;
     margin: 5px;
+    z-index: 1;
   }
   
   /* Skills */
@@ -126,11 +150,13 @@ body {
     flex-flow: wrap;
     justify-content: center;
     align-items: center;
+    z-index: 2;
   }
   
   .skill {
     border: 1px solid gray;
     display: block;
+    background-color: lightgrey;
     border-radius: 6px;
     text-align: center;
     margin: 50px;
@@ -138,33 +164,39 @@ body {
     width: 2in;
     font-size: 20px;
     box-shadow: 0 3px 10px gray;
+    z-index: 1;
   }
   
   .skill img {
     height: 50px;
     align-items: center;
+    z-index: 1;
   }
   
   .skills h2 {
     align-items: center;
     font-size: 20px;
+    color: white;
     margin-block-start: 8px;
     margin-block-end: 5px;
     font-weight: bold;
+    z-index: 1;
   } 
   
   .skills p {
     align-items: center;
     font-size: 10px;
-    color: gray;
+    color: white;
     margin-block-start: 5px;
     margin-block-end: 5px;
+    z-index: 1;
   } 
   
   .flex_center {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
   }
   
   /* Projects */
@@ -172,27 +204,32 @@ body {
   .projects-container {
     margin-top: 30px;
     margin-left: 60px;
+    z-index: 1;
   }
   
   .projects-container hr {
     border: 1px solid lightgray;
     width: 75%;
     margin-left: 5cm;
+    z-index: 1;
   }
   
   .project-card {
     margin: 0 15px 15px 30px;
     padding-bottom: 5px;
+    z-index: 1;
   }
   
   .project-card h3 {
     font-size: 25px;
     margin-left: 30px;
+    z-index: 1;
   }
   
   .project-card li {
     font-size: 20px;
     margin-left: 30px;
+    z-index: 1;
   }
   
   /* Recommendations */
@@ -204,6 +241,7 @@ body {
     flex-direction: row;
     flex-flow: wrap;
     padding: 20px;
+    z-index: 1;
   }
   
   .recommendation {
@@ -218,13 +256,14 @@ body {
     margin: 10px;
     border:1px solid gray;
     font-size: 18px;
-    height:150px
+    height:150px;
   }
   
   .recommendation span {
     color: #7600bc;
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
+    z-index: 1;
   }
   
   /* Scroll to Top Button */
@@ -241,6 +280,7 @@ body {
     right: 3%;
     bottom: 3%;
     cursor: pointer;
+    z-index: 1;
   }
   
   /* Form Pop-up */
@@ -319,6 +359,7 @@ body {
     padding: 10px;
     width: 2in;
     font-size: 20px;
+    z-index: 1;
   }
   
   button:hover {
@@ -329,4 +370,5 @@ body {
     border-radius: 6px;
     text-align: center;
     cursor: pointer;
+    z-index: 1;
   }
